# telco_live_event_splicing

./: .gitignore  DEMO.md  README.md  TASKS.md  databricks.yml  pyproject.toml
dynamic-network-slicing-live-events/: SKILL.md  data-schema.md  project-structure.md  storyline.md  technical-storyline.md  walkthrough.docx  walkthrough.md
resources/: data_generation.job.yml  model_training.job.yml  revenue_genie_space.genie.yml  slice_automation.job.yml  telemetry_pipeline.pipeline.yml
src/app/: app.yaml  main.py  requirements.txt
src/app/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/app/frontend/src/: App.jsx
src/app/frontend/src/components/: KPIBar.jsx  LiveFeed.jsx  SimControls.jsx  StadiumMap.jsx
src/app/frontend/src/styles/: app.css
src/dashboards/: network_operations.lvdash.json
src/data_generation/: generate_customers.py  generate_events.py  generate_network_slices.py  generate_telemetry.py
src/jobs/: autonomous_slice_provisioning.py
src/models/: congestion_predictor.py  customer_scorer.py
src/pipeline/transformations/: bronze_cell_tower_telemetry.sql  bronze_customer_profiles.sql  bronze_event_calendar.sql  bronze_network_slices.sql  gold_congestion_features.sql  gold_conversion_opportunities.sql  gold_revenue_analytics.sql  silver_customer_enriched.sql  silver_event_tower_proximity.sql  silver_tower_metrics.sql
